<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Geofence App</string>
    <string name="permission_description">In order to use this application we will first need to request location permission from you. Otherwise we will not be able to provide you with our service. If you agree and wish to continue tap on the button below.</string>
    <string name="permission_required">Permission Required</string>
    <string name="continue_btn">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="_2_3">2/3</string>
    <string name="location">Location</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="done">Done</string>
    <string name="_3_3">3/3</string>
    
    <string name="display_meters">%1$s m</string>
    <string name="display_kilometers">%1$s km</string>
    <string name="long_press_on_the_map_n_to_add_geofence">Long press on the map \n to add Geofence</string>
    <string name="_1_3" tools:ignore="TypographyFractions">1/3</string>
    <string name="name">Name</string>
    <string name="choose_a_radius_for_your_geofence">Choose a radius for your Geofence</string>
    <string name="_500_0_m">500.0 m</string>
    <string name="geofence">Geofence</string>
    <string name="coordinates">Coordinates:</string>
    <string name="location1">Location:</string>
    <string name="radius">Radius</string>
    <string name="no_geofence_found">No Geofence found</string>
    <string name="choose_a_default_radius_for_future_geofences">Choose a default radius for future geofences</string>
    <string name="enters"><u>Enters</u></string>
    <string name="dwells"><u>Dwells</u></string>
</resources>