<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="geofencesEntity"
            type="com.example.geofenceapp.data.GeofenceEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <View
            android:id="@+id/white_background"
            android:layout_width="wrap_content"
            android:layout_height="135dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/snapshot_imageView"
            setSnapshot="@{geofencesEntity.snapshot}"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="12dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/white_background"
            app:layout_constraintStart_toStartOf="@id/white_background"
            app:layout_constraintTop_toTopOf="@id/white_background"
            tools:srcCompat="@tools:sample/avatars" />

        <!--        <TextView-->
        <!--            android:id="@+id/name_textView"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:layout_marginEnd="8dp"-->
        <!--            android:maxLines="1"-->
        <!--            android:text="@{geofencesEntity.name}"-->
        <!--            android:textColor="@color/black"-->
        <!--            android:textSize="20sp"-->
        <!--            android:textStyle="bold"-->
        <!--            app:layout_constraintEnd_toEndOf="@id/white_background"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/snapshot_imageView"-->
        <!--            app:layout_constraintTop_toTopOf="@id/white_background"-->
        <!--            tools:text="Charlotte Geofence" />-->

        <EditText
            android:id="@+id/name_editTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textShortMessage|textPersonName|textAutoComplete|textEmailAddress"
            android:maxLength="25"
            android:maxLines="1"
            android:text="@{geofencesEntity.name}"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/white_background"
            app:layout_constraintStart_toEndOf="@+id/snapshot_imageView"
            app:layout_constraintTop_toTopOf="@id/white_background"
            tools:text="Charlotte Geofence" />


        <TextView
            android:id="@+id/locationTitle_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location1"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/location_textView"
            app:layout_constraintStart_toStartOf="@+id/name_editTextView"
            app:layout_constraintTop_toTopOf="@+id/location_textView" />

        <TextView
            android:id="@+id/coordinatesTitle_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinates"
            android:textSize="13sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/coordinates_textView"
            app:layout_constraintStart_toStartOf="@+id/locationTitle_textView" />

        <TextView
            android:id="@+id/radiusTitle_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            android:textSize="13sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/radius_textView"
            app:layout_constraintStart_toStartOf="@+id/coordinatesTitle_textView" />

        <TextView
            android:id="@+id/location_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="7dp"
            android:maxLines="2"
            android:text="@{geofencesEntity.location}"
            android:textAlignment="viewStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/coordinates_textView"
            app:layout_constraintTop_toBottomOf="@+id/name_editTextView"
            tools:text="San Jose International Airport" />

        <TextView
            android:id="@+id/coordinates_textView"
            setLat="@{geofencesEntity.latitude}"
            setLong="@{geofencesEntity.longitude}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="2dp"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/coordinatesTitle_textView"
            app:layout_constraintTop_toBottomOf="@+id/location_textView"
            tools:text="33.8688, 151.2093" />

        <TextView
            android:id="@+id/radius_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@{String.valueOf(geofencesEntity.radius)}"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/coordinates_textView"
            app:layout_constraintTop_toBottomOf="@+id/coordinates_textView"
            tools:text="150 m" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="339dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/enters"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="12" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/dwells"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="01" />

        <View
            android:id="@+id/view3"
            android:layout_width="8dp"
            android:layout_height="0dp"
            android:background="@color/blue_700"
            app:layout_constraintBottom_toBottomOf="@+id/white_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>